# libradtran

./: ChangeLog  INSTALL  Makeconf.in  Makefile.in  README  README.macosx  README.unpacking  README.windows  TODO  configure  configure.in
GUI/: FloatSpin.py  GUI.py  INSTALL  MakeExampleDialog.py  Makefile.in  Plot.py  README  app_setup.py  config_setup.py  create.py  exe_setup.py  linux_setup.py  subprocess_fix.py  variables.py  widgets.py  wxmpl.py
GUI/resources/: GUI_DOC  Makefile.in  how_to.html
data/: Makefile.in
data/aerosol/: Makefile.in
data/aerosol/OPAC/: Makefile.in
data/aerosol/shettle/: Makefile.in  tau550.1.1  tau550.1.2  tau550.2.1  tau550.2.2  tau550.3.1  tau550.3.2  tau550.4.1  tau550.4.2
data/albedo/: Makefile.in
data/albedo/IGBP_map/: Makefile.in  SURFACE_TYPE_IGBP_10min.cdf
data/albedo/bowker85/: Makefile.in
data/altitude/: Makefile.in
data/atmmod/: Makefile.in
data/cloudprp/: Makefile.in  README  cloudprp2cdf.awk  cloudprp2cdf.sh  makeinp.sh
data/cloudprp/input/: Makefile.in  ch006.wvl  ch008.wvl  ch016.wvl  ch039.wvl  ch062.wvl  ch073.wvl  ch087.wvl  ch097.wvl  ch108.wvl  ch120.wvl  ch134.wvl
data/correlated_k/: Makefile.in
data/correlated_k/fu/: Makefile.in
data/correlated_k/kato/: Makefile.in  cross_section.table.CO2.22.cdf  cross_section.table.CO2.24.cdf  cross_section.table.CO2.25.cdf  cross_section.table.CO2.26.cdf  cross_section.table.CO2.27.cdf  cross_section.table.CO2.28.cdf  cross_section.table.CO2.29.cdf  cross_section.table.CO2.30.cdf  cross_section.table.CO2.31.cdf  cross_section.table.CO2.32.cdf  cross_section.table.H2O.09.cdf  cross_section.table.H2O.10.cdf  cross_section.table.H2O.11.cdf  cross_section.table.H2O.12.cdf  cross_section.table.H2O.13.cdf  cross_section.table.H2O.14.cdf  cross_section.table.H2O.15.cdf  cross_section.table.H2O.16.cdf  cross_section.table.H2O.17.cdf  cross_section.table.H2O.18.cdf  cross_section.table.H2O.19.cdf  cross_section.table.H2O.20.cdf  cross_section.table.H2O.21.cdf  cross_section.table.H2O.22.cdf  cross_section.table.H2O.23.cdf  cross_section.table.H2O.24.cdf  cross_section.table.H2O.25.cdf  cross_section.table.H2O.26.cdf  cross_section.table.H2O.27.cdf  cross_section.table.H2O.28.cdf  cross_section.table.H2O.29.cdf  cross_section.table.H2O.30.cdf  cross_section.table.H2O.31.cdf  cross_section.table.H2O.32.cdf  cross_section.table._O2.14.cdf  cross_section.table._O2.16.cdf  cross_section.table._O2.22.cdf  cross_section.table._O2.24.cdf  cross_section.table._O3.30.cdf  (+2 more)
data/correlated_k/kato2/: Makefile.in  cross_section.table.H2O.16.hitran2k.cdf  cross_section.table.H2O.17.hitran2k.cdf  cross_section.table.H2O.20.hitran2k.cdf  cross_section.table.H2O.21.hitran2k.cdf  cross_section.table.H2O.23.hitran2k.cdf  cross_section.table.H2O.26.hitran2k.cdf  (+2 more)
data/correlated_k/kato2.hitran96/: Makefile.in  cross_section.table.H2O.12.cdf  cross_section.table.H2O.14.cdf  cross_section.table.H2O.17.cdf  cross_section.table.H2O.19.cdf  cross_section.table.H2O.20.cdf  cross_section.table.H2O.21.cdf  cross_section.table.H2O.22.cdf  cross_section.table.H2O.23.cdf  cross_section.table.H2O.24.cdf  cross_section.table.H2O.25.cdf  cross_section.table.H2O.26.cdf  cross_section.table.H2O.27.cdf  cross_section.table.H2O.28.cdf  cross_section.table.H2O.29.cdf  cross_section.table.H2O.30.cdf  cross_section.table.H2O.31.cdf  cross_section.table.H2O.32.cdf
data/crs/: Makefile.in  crs_o4_greenblatt.py
data/filter/: Makefile.in
data/ic/: Makefile.in
data/scripts/: Makefile.in  uvspec  uvspec_commands
data/solar_flux/: Makefile.in  apm_0_5nm  apm_1nm  atlas2  atlas3  atlas_plus_modtran  atlas_plus_modtran_ph  fu  kato  kratz  kratz.org  rgb  rgb_bands
data/wc/: Makefile.in
doc/: Makefile.in  intro.tex  libRadtran.tex  literature.bib  mystic.tex  optical_properties.tex  radiative_transfer.tex  radiative_transfer_theory.tex  sdoc2.awk  ssradar.tex  title.tex  tools.tex
doc/figs/: Makefile.in
examples/: Makefile.in  UVSPEC_BRDF_HAPKE.OUT  UVSPEC_MC_BOXAIRMASS.OUT  UVSPEC_MC_SPECTRAL.OUT  UVSPEC_MC_SPECTRAL_REPTRAN.OUT  UVSPEC_MC_SPHERICAL.OUT  UVSPEC_MC_SUNPHOTOMETER.OUT  UVSPEC_MC_SUNSHAPE.OUT  UVSPEC_SPHER_ALB.OUT
flexstor/: Column.pm  Flexstor.pm  Makefile.in  SGL.pm  Spectrum.pm  TABLE.pm
lib/: Makefile.in
libsrc_c/: .depend  GLmystic.h  Makefile.in  alis.c  alis.h  ambralsfor.c  ambralsfor.h  ascii.c  ascii.h  bandec.c  bandec.h  c_tzs.c  c_tzs.h  cdisort.c  cdisort.h  cnv.c  cnv.h  equation.c  equation.h  errors.c  errors.h  fortran_and_c.c  fortran_and_c.h  function.c  function.h  getopt.c  getopt.h  integrat.c  integrat.h  lidar.h  linear.c  linear.h  matrix_operations.h  miecalc.c  miecalc.h  misc.h  mystic.c  mystic.h  mystic_3d.h  netCDF_functions.c  (+46 more)
libsrc_f/: BDREF.f  DISORT.doc  DISORT.f  DISORT2.f  DISORTblas.f  DISORTlapack.f  ErrPack.f  ErrPack2.f  IGBP_spectral_albedo.f  IGBP_spectral_albedo.inc  LINPAK.f  MIEV.doc  MIEV0.f  Makefile.in  POLRADTRAN.MXD  REFICE.f  REFWAT.f  aeropt.f  aerprof.f  aerwvn.f  avhrr.inc  avhrr11.f  avhrr12.f  avhrr13.f  avhrr14.f  avhrr15.f  avhrr21.f  avhrr22.f  avhrr23.f  avhrr24.f  avhrr31.f  avhrr32.f  avhrr33.f  avhrr34.f  avhrr35.f  avhrr41.f  avhrr51.f  avhrr_kratz.h  consts.inc  cozena.f  (+38 more)
sdoc/: Makefile.in  README  sdoc.awk  sdoc.cnf  sdoc.texi  texinfo2latex.awk
src/: .depend  Calc_J.pl  Gen_o3_tab.pl  Gen_snow_tab.pl  Gen_wc_tab.pl  MIE_SMOOTH  Makefile.in  UVTools.pm  addlevel  addlevel.c  aerosol.c  aerosol.h  airmass.pl  albedo.c  albedo.h  ancillary.c  ancillary.h  angres.c  atmosphere.c  atmosphere.h  ck.c  ck.h  ckdcldf.f  ckdfu.c  ckdfu.h  ckdfuf.f  ckdicef.f  ckdrayf.f  cldprp.c  cloud.c  cloud.h  cloud3d.c  cloud3d.h  cloudprp2cdf.awk  cloudprp2cdf.sh  conv.c  depthscl.f  elevation2d.c  elevation2d.h  extraterrestrial.c  (+58 more)
src_py/: Makefile.in  aerosol_options.py  cloud_options.py  general_atmosphere_options.py  geometry_options.py  lex_starter.l  mc_options.py  molecular_options.py  output_options.py  solver_options.py  special_options.py  surface_options.py  translate.py  writeLex.py.in
test/: Makefile.in  test.pl.in
(+280 files in other folders)
